# fortext

./: CHANGELOG.md  README.md  ansi.py  fortext.py  pyproject.toml  requirements-dev.txt  tox.ini
.github/workflows/: ci.yml  publish.yml
src/fortext/: __init__.py  ansi.py  permutation.py  pretty.py  pretty_print.py  style.py  syntax.py
tests/: ansi_test.py  permutations_test.py  style_test.py  syntax_test.py
