[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fortext"
version = "1.0.0"
authors = [{ name = "4MBL" }]
description = "Text stylizer mainly for CLI output."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["ansi", "color", "cli", "console", "formatting", "style", "text"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Topic :: Utilities",
    "Typing :: Typed",
]

dependencies = []
[project.urls]
Home = "https://github.com/4mbl/fortext"
Repository = "https://github.com/4mbl/fortext"
Documentation = "https://github.com/4mbl/fortext/blob/main/README.md"
"Bug Tracker" = "https://github.com/4mbl/fortext/issues"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D203", "D213", "ISC001", "COM812"]
exclude = ["tests"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.tox]
requires = ["tox>=4.21"]
env_list = ["3.13", "3.12", "3.11", "3.10", "format", "lint", "typecheck"]
isolated_build = true
skip_missing_interpreters = true

[tool.tox.gh.python]
"3.12" = ["3.12", "format", "lint", "typecheck"]
"3.13" = ["3.13", "format", "lint", "typecheck"]
"3.11" = ["3.11", "format", "lint", "typecheck"]
"3.10" = ["3.10", "format", "lint", "typecheck"]

[tool.tox.env_run_base]
deps = ["-r requirements-dev.txt"]
commands = [["pytest", "{posargs:tests}", "--basetemp={envtmpdir}"]]
setenv = { PYTHONPATH = "{toxinidir}" }

[tool.tox.env.format]
deps = ["-r requirements-dev.txt"]
commands = [["ruff", "format", ".", "--config=pyproject.toml", "--check"]]

[tool.tox.env.lint]
deps = ["-r requirements-dev.txt"]
commands = [
    [
        "ruff",
        "check",
        ".",
        "--config=pyproject.toml",
        "--extend-exclude=tests",
    ],
]

[tool.tox.env.typecheck]
deps = ["-r requirements-dev.txt"]
commands = [["mypy", "src/"]]
